# codex-review-action

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  action.yml  mypy.ini  pyproject.toml  requirements.txt
.beads/: issues.jsonl
.github/: release-please-config.json
.github/workflows/: ci.yml  codex-review.yml  draft-release.yml  release-please.yml  release-published.yml
cli/: README.md  anchor_engine.py  codex_client.py  config.py  context_manager.py  edit_processor.py  edit_prompt.py  exceptions.py  git_ops.py  github_client.py  main.py  models.py  patch_parser.py  prompt_builder.py  review_processor.py  review_prompt.py
cli/clients/: __init__.py  codex_client.py  codex_event_debugger.py  git_ops.py  github_client.py
cli/core/: __init__.py  config.py  exceptions.py  filesystem.py  github_types.py  models.py
cli/review/: anchor_engine.py  artifacts.py  context_manager.py  dedupe.py  patch_parser.py  posting.py  prepare_resume_state.py  resume_state.py  review_prompt.py
cli/workflows/: edit_prompt.py  edit_workflow.py  review_workflow.py
prompts/: review.md
scripts/: codex_autoreview.py
tests/: conftest.py  test_address_comments.py  test_codex_client.py  test_codex_event_debugger.py  test_config.py  test_edit_prompt.py  test_git_ops.py  test_main.py  test_module_coverage.py  test_resume_state.py  test_review_dedupe.py  test_review_posting.py  test_review_prompt.py  test_review_summary.py  test_review_workflow.py
